# voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/pricebook/: price-book.md  quoting-rules.md
db/: schema.sql
evals/: pipeline_digest.py  run_evals.py
evals/golden/: job1.json  job2.json  job3.json  job4.json  job5.json  job6.json  job7.json  job8.json  job9.json
src/voice_agent/: api.py  config.py  extract.py  pipeline.py  quote.py  render.py  transcribe.py
